clusters/apps/ryot/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryot-db
  namespace: apps
spec:
  selector:
    matchLabels:
      app: ryot-db
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ryot-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:16-alpine
          name: ryot-db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: ryot-pvc
