clusters/apps/ryot/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryot-db
  namespace: apps
spec:
  selector:
    app: ryot-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
