clusters/apps/ryot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryot
  namespace: apps
spec:
  selector:
    app: ryot
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
