clusters/apps/ryot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ryot
  namespace: apps
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: ryot.homelab.haseebmajid.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ryot
                port:
                  number: 8000
  tls:
    - hosts:
        - ryot.homelab.haseebmajid.dev
      secretName: ryot-haseebmajid-dev-tls
